package blackjack;

public enum Suit {
    S,  //スペード
    H,  //ハート
    D,  //ダイヤ
    C   //クローバ
}
