@startuml

Card <|-- Suit
Card <|-- Point
Hand <|--Card
Deck <|-- Card
Hand <-- Dealer


enum Suit {
スペード
ハート
ダイヤ
クラブ
}

class Point {
int numberOfCard
String name
int calculationPoint
String toString()
}

class Card {
Suit suit
Point point
String toString()
}

class Hand {
List<Card> cardsOfHand
calculate()
}

class Dealer {
Hand hand
judge()
}

class Deck {
List<Card> cardsOfDeck
shuffle()
}

@enduml